--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
         environment:
             APP_ENV: 'dev'
             APP_SECRET: '8d0d1677a02b1bd09326fc3403bdfb0f'
-            DATABASE_URL: 'mysql://symfony:symfony@database:3306/symfony?serverVersion=mariadb-10.5.9'
+            DATABASE_URL: 'mysql://root:krankenhaus9@database:3306/symfony?serverVersion=mariadb-10.5.9'
         ports:
             - '9090:9000'
         volumes:
@@ -25,7 +25,7 @@ services:
         environment:
             APP_ENV: 'dev'
             APP_SECRET: '8d0d1677a02b1bd09326fc3403bdfb0f'
-            DATABASE_URL: 'mysql://symfony:symfony@database:3306/symfony?serverVersion=mariadb-10.5.9'
+            DATABASE_URL: 'mysql://root:Krankenhaus9@database:3306/symfony?serverVersion=mariadb-10.5.9'
         ports:
             - '8080:80'
         depends_on:
