--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -4,13 +4,14 @@ RUN apt update \
     && apt install -y zlib1g-dev g++ git libicu-dev zip libzip-dev zip \
     && docker-php-ext-install intl opcache pdo pdo_mysql \
     && pecl install apcu \
+    && pecl install redis \
     && docker-php-ext-enable apcu \
+    && docker-php-ext-enable redis \
     && docker-php-ext-configure zip \
     && docker-php-ext-install zip
 
 RUN apt install -y libpng*
 RUN docker-php-ext-install gd
-RUN docker-php-ext-install redis
 
 WORKDIR /var/www/symfony
 
