--- a/docker/php/scripts/php.ini
+++ b/docker/php/scripts/php.ini
@@ -947,8 +947,7 @@ default_socket_timeout = 86400
 ;extension=tidy
 ;extension=xmlrpc
 ;extension=xsl
-
-extension=redis.so
+;extension=redis.so
 
 
 ;;;;;;;;;;;;;;;;;;;
