--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -14,6 +14,7 @@ server {
     }
 
     location ~ ^/index\\.php(/|$) {
+        client_max_body_size 100M;
         fastcgi_pass php:9000;
         fastcgi_split_path_info ^(.+\\.php)(/.*)$;
         include fastcgi_params;
