--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -1,12 +1,12 @@
 FROM php:7.4-fpm
 
 RUN apt update
-RUN apt install -y zlib1g-dev g++ git screen htop libicu-dev zip libmcrypt-dev libzip-dev libonig-dev libbz2-dev libmagickwand-dev libfreetype6 libfreetype6-dev
-RUN apt install -y libpng*
+RUN apt install -y zlib1g-dev g++ git screen htop libicu-dev zip libzip-dev libonig-dev libbz2-dev libmagickwand-dev
+RUN apt install -y libfreetype6-dev libjpeg62-turbo-dev libpng12-dev
 
-RUN docker-php-ext-install -j$(nproc) iconv mcrypt pdo_mysql gd zip curl bcmath opcache mbstring bz2
+RUN docker-php-ext-install -j$(nproc) iconv pdo_mysql gd zip curl bcmath opcache mbstring bz2
 RUN docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/
-RUN docker-php-ext-enable iconv mcrypt pdo_mysql gd zip curl bcmath opcache mbstring bz2
+RUN docker-php-ext-enable iconv pdo_mysql gd zip curl bcmath opcache mbstring bz2
 
 RUN pecl install redis
 RUN docker-php-ext-configure redis
