--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -1,20 +1,6 @@
 FROM php:7.4-fpm
 
-ARG PHP_IM_VERSION=3.4.4
-ARG PHP_VERSION=7.4
-
-RUN apt update
-RUN apt-get install -y gnupg2 && apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv 14AA40EC0831756756D7F66C4F4EA0AAE5267A6C && \
-    echo -n 'deb http://ppa.launchpad.net/ondrej/php/ubuntu bionic main' > /etc/apt/sources.list.d/ondrej-ubuntu-php-bionic.list && apt-get update && \
-    curl -L https://github.com/Imagick/imagick/archive/${PHP_IM_VERSION}.tar.gz -o imagick-${PHP_IM_VERSION}.tar.gz && \
-    tar -zxvf imagick-${PHP_IM_VERSION}.tar.gz && rm imagick-${PHP_IM_VERSION}.tar.gz && \
-    cd imagick-${PHP_IM_VERSION} && phpize && ./configure && make && \
-    mkdir /phpmods && cp -r modules /phpmods && \
-    cd .. && \
-    rm -rf imagick-${PHP_IM_VERSION} && \
-    ldconfig /usr/local/lib
-
-
+RUN apt-get update
 RUN apt install -y zlib1g-dev g++ git screen htop libicu-dev zip libzip-dev libonig-dev libbz2-dev libmagickwand-dev
 RUN apt install -y libfreetype6-dev libjpeg62-turbo-dev libpng*
 
@@ -33,10 +19,6 @@ RUN docker-php-ext-enable igbinary
 RUN pecl install apcu
 RUN docker-php-ext-configure apcu
 RUN docker-php-ext-enable apcu
-
-## CLEANUP
-RUN apt-get remove --autoremove --purge -y gnupg2 php${PHP_VERSION}-dev && \
-    rm -rf /var/lib/apt/lists/*
 
 WORKDIR /var/www/symfony
 
