Anpassungen Dockerfile php

--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -1,24 +1,24 @@
-FROM php:7.4-fpm
+FROM ubuntu:18.04
+
+ARG PHP_VERSOION=7.4
+
 
 RUN apt-get update
 RUN apt install -y zlib1g-dev g++ git screen htop libicu-dev zip libzip-dev libonig-dev libbz2-dev libmagickwand-dev
 RUN apt install -y libfreetype6-dev libjpeg62-turbo-dev libpng*
-
-RUN docker-php-ext-install -j$(nproc) iconv pdo_mysql gd zip bcmath opcache mbstring bz2
-RUN docker-php-ext-configure gd
-RUN docker-php-ext-enable iconv pdo_mysql gd zip bcmath opcache mbstring bz2
-
-RUN pecl install redis
-RUN docker-php-ext-enable redis
-
-RUN pecl install igbinary
-RUN docker-php-ext-enable igbinary
-
-RUN pecl install apcu
-RUN docker-php-ext-enable apcu
-
-RUN pecl install imagick
-RUN docker-php-ext-enable imagick
+RUN apt install -y php${PHP_VERSOION}-fpm \
+        php${PHP_VERSOION}-cli \
+        php${PHP_VERSOION}-intl \
+        php${PHP_VERSOION}-gd \
+        php${PHP_VERSOION}-imagick \ 
+        php${PHP_VERSOION}-json \
+        php${PHP_VERSOION}-xml \
+        php${PHP_VERSOION}-apcu \ 
+        php${PHP_VERSOION}-mysqli \
+        php${PHP_VERSOION}-zip \
+        php${PHP_VERSOION}-opcache \
+        php${PHP_VERSOION}-mbstring \
+        php${PHP_VERSOION}-redis 
 
 WORKDIR /var/www/symfony
 
@@ -27,4 +27,4 @@ RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local
 RUN curl -sS https://get.symfony.com/cli/installer | bash
 RUN mv /root/.symfony/bin/symfony /usr/local/bin/symfony
 
-CMD ["php-fpm"]
+CMD ["php-fpm7.4"]
