--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -5,7 +5,7 @@ ARG PHP_VERSOION=7.4
 
 RUN apt-get update
 RUN apt install -y zlib1g-dev g++ git screen htop libicu-dev zip libzip-dev libonig-dev libbz2-dev libmagickwand-dev
-RUN apt install -y libfreetype6-dev libjpeg* libpng*
+RUN apt install -y libfreetype6-dev libpng*
 RUN apt install -y php${PHP_VERSOION}-fpm \
         php${PHP_VERSOION}-cli \
         php${PHP_VERSOION}-intl \
