--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -5,8 +5,10 @@ ARG PHP_VERSOION=7.4
 
 RUN apt-get update
 RUN apt install -y zlib1g-dev g++ git screen htop libicu-dev zip libzip-dev libonig-dev libbz2-dev libmagickwand-dev
-RUN apt install -y libfreetype6-dev libpng*
-RUN apt install -y php${PHP_VERSOION}-fpm \
+RUN apt install -y libfreetype6-dev libpng* software-properties-common
+RUN add-apt-repository ppa:ondrej/php
+RUN apt-get update
+RUN apt install -y php${PHP_VERSOION} php${PHP_VERSOION}-fpm \
         php${PHP_VERSOION}-cli \
         php${PHP_VERSOION}-intl \
         php${PHP_VERSOION}-gd \
