--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -31,5 +31,6 @@ RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local
 
 RUN curl -sS https://get.symfony.com/cli/installer | bash
 RUN mv /root/.symfony/bin/symfony /usr/local/bin/symfony
+RUN mkdir /run/php
 
 CMD ["php-fpm7.4"]
